k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aos
  labels:
    app.kubernetes.io/name: account-opening-system
    app.kubernetes.io/part-of: aos
